[gd_scene load_steps=3 format=3 uid="uid://djsdofemfjb58"]

[ext_resource type="Theme" uid="uid://bunuwhfnqwadq" path="res://ui/default_theme.tres" id="1_t7e0r"]
[ext_resource type="Script" uid="uid://dd4r1r2hvvp4d" path="res://ui/main_menu.gd" id="2_0dkrt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7e0r")
script = ExtResource("2_0dkrt")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.564706)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -84.0
offset_right = 200.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Start Game"

[node name="HowToPlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "How To Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Exit Game"
